# web

./: .codeclimate.yml  .copier-answers.yml  .coveragerc  .editorconfig  .eslintrc  .eslintrc.yml  .flake8  .gitignore  .isort.cfg  .oca_hooks.cfg  .pre-commit-config.yaml  .prettierrc.yml  .pylintrc  .pylintrc-mandatory  .python-version  .ruff.toml  .t2d.yml  .travis.yml  CONTRIBUTING.md  README  README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  codewithme  creations.textt  crowdin.yml  ir_view.py  oca_dependencies.txt  project_view.xml  pwa  requirements.txt  test-requirements.txt  user
advanced_filters/: __openerp__.py
bi_view_editor/: README.rst
bus_enhanced/: __openerp__.py  readme.rst  template.xml
color_theme/: __init__.py  __openerp__.py  color_theme.py  user_theme.py
extended_binary_field/: __init__.py  __openerp__.py  fields.py  ir_attachment_view.xml
form_sheet_full_screen/: __openerp__.py
form_sheet_full_screen_all/: __openerp__.py
help_contextual_popup/: README.rst  __init__.py  __openerp__.py  controller.py  model.py
help_online/: README.rst  __init__.py  __manifest__.py  __openerp__.py
help_popup/: README.rst  __manifest__.py  __openerp__.py  model.py
hide_duplicate_button/: AUTHORS.txt  __init__.py  __openerp__.py
m2o_multi/: __manifest__.py  readme.rst  views.xml
menu_collapsible/: README.rst  __openerp__.py
model_basic_ops_notifications/: __init__.py  __manifest__.py
one2many_multi_select_input/: README.rst  __openerp__.py
paste_from_clipboard/: README.rst  __openerp__.py
placeholder/: __openerp__.py
proxy_action/: README.rst  __init__.py  __manifest__.py  __openerp__.py  helper.py
ribbon_test_environment/: AUTHORS.txt  README.rst  __openerp__.py
save_discard_button/: __manifest__.py
search_filter_action_specific/: __init__.py  __openerp__.py  ir_filters.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
support_branding/: README.rst  __init__.py  __manifest__.py  __openerp__.py
system_filter/: README.rst  __init__.py  __manifest__.py
test_text_widget/: __openerp__.py  test.py
tooltip_menu/: __manifest__.py
views/: web_timeline.xml
web_access_rule_buttons/: README.rst  __manifest__.py  __openerp__.py  models.py
web_action_conditionable/: README.rst  __init__.py  __manifest__.py  __openerp__.py
web_add_button_position/: README.rst  __init__.py  __openerp__.py
web_addline_large_btn/: README.rst  __manifest__.py
web_advanced_filter/: README.rst  __init__.py  __manifest__.py
web_advanced_filters/: __init__.py  __openerp__.py
web_advanced_search/: README.rst  __init__.py  __manifest__.py  __openerp__.py
web_advanced_search_list/: __init__.py  __manifest__.py
web_advanced_search_wildcard/: README.rst  __manifest__.py  __openerp__.py
web_advanced_search_x2many/: __openerp__.py
web_color/: README.rst  (+4 more)
(+6916 files in other folders)
