[project]
name = "odoo-addons-oca-web"
version = "17.0.20241021.0"
dependencies = [
    "odoo-addon-web_calendar_slot_duration>=17.0dev,<17.1dev",
    "odoo-addon-web_dialog_size>=17.0dev,<17.1dev",
    "odoo-addon-web_environment_ribbon>=17.0dev,<17.1dev",
    "odoo-addon-web_favicon>=17.0dev,<17.1dev",
    "odoo-addon-web_field_tooltip>=17.0dev,<17.1dev",
    "odoo-addon-web_group_expand>=17.0dev,<17.1dev",
    "odoo-addon-web_m2x_options>=17.0dev,<17.1dev",
    "odoo-addon-web_no_bubble>=17.0dev,<17.1dev",
    "odoo-addon-web_notify>=17.0dev,<17.1dev",
    "odoo-addon-web_refresher>=17.0dev,<17.1dev",
    "odoo-addon-web_remember_tree_column_width>=17.0dev,<17.1dev",
    "odoo-addon-web_responsive>=17.0dev,<17.1dev",
    "odoo-addon-web_theme_classic>=17.0dev,<17.1dev",
    "odoo-addon-web_timeline>=17.0dev,<17.1dev",
    "odoo-addon-web_tree_dynamic_colored_field>=17.0dev,<17.1dev",
    "odoo-addon-web_tree_many2one_clickable>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_bokeh_chart>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_domain_editor_dialog>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_dropdown_dynamic>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_image_download>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_numeric_step>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_open_tab>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_plotly_chart>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_url_advanced>=17.0dev,<17.1dev",
    "odoo-addon-web_widget_x2many_2d_matrix>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
